[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rt-reporter"
version = "2.1.2"
description = "This project contains an implementation of a Runtime Reporter (RR) for the RT-Constellation..."
authors = [
    {name = "Carlos Gustavo Lopez Pombo", email = "clpombo@gmail.com"}
]
license = {text = "GNU AFFERO GENERAL PUBLIC LICENSE Version 3, 19 November 2007"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pika (~=1.3.2)",
    "rt-rabbitmq-wrapper @ git+https://github.com/invap/rt-rabbitmq-wrapper.git@v2.0.1"
]

[project.urls]
repository = "https://github.com/invap/rt-reporter"

[tool.setuptools.packages.find]
include = ["rt_reporter*"]

[dependency-groups]
dev = [
    "pytomlcleaner (>=1.0.0,<2.0.0)"
]

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true